[package]
name = "auth_me"
version = "0.1.0"
edition = "2021"

[dependencies]
pq-sys = "0.6.0"                                                # Rust binding to the PostgreSQL library
axum = "0.8.1"                                                  # Server
axum-macros = "0.5.0"                                           # Server macros
diesel = { version = "2.2.8", features = ["postgres", "r2d2"] } # ORM
dotenvy = "0.15.7"                                              # For getting environment variables
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
cookie = "0.16"


csrf = "2.0"                                                        # CSRF protection
jsonwebtoken = "8.1"                                                # JWT implementation
tracing = "0.1"
tracing-subscriber = "0.3"


tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }               # CORS middleware
tower-http = { version = "0.4", features = ["security-headers"] }   # Security headers middleware (helmet equivalent)
tower-http = { version = "0.4", features = ["trace"] }              # HTTP request/response logging


tracing = "0.1"                                                     # Logging framework
tracing-subscriber = "0.3"                                          # Logging implementation

config = "0.13"                                                     # Configuration management with environment support
